# my_niri_shell

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/bar/: mod.rs
src/bar/bar_components/: clock.rs  left_button.rs  mod.rs  right_button.rs  workspaces.rs
src/bar/bar_components/devices/: battery_device_label.rs  mod.rs  network.rs  sound_output_device_label.rs
src/css_file/: style.css  style.css.map  style.scss
src/dashboard/: mod.rs
src/dock/: app_getter.rs  mod.rs
