[package]
name = "my_niri_shell"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.3.1"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_18"] }
gtk4-layer-shell = "0.5.0"
niri-ipc = "25.2.0"
pipewire = "0.8.0"
rust-ini = "0.21.1"
serde = "1.0.219"
serde_json = "1.0.140"
zbus = "5.5.0"
